FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/Diet_Plan__c.object-meta.xml
<CustomObject>
    <label>Diet Plan</label>
    <nameField>
        <displayFormat>FLP-DP-{000}</displayFormat>
        <label>Diet Plan Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diet Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>