FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/fields/Calorie_Goal__c.field-meta.xml
<CustomField>
    <fullName>Calorie_Goal__c</fullName>
    <label>Calorie Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>