FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/fields/Diet_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Diet_End_Date__c</fullName>
    <label>Diet End Date</label>
    <type>Date</type>
</CustomField>