FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/fields/Diet_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Diet_Plan_Name__c</fullName>
    <label>Diet Plan Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low-Carb Diet</fullName>
            </value>
            <value>
                <fullName>Vegan Diet</fullName>
            </value>
            <value>
                <fullName>Keto Diet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>