FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/fields/Diet_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Diet_Start_Date__c</fullName>
    <label>Diet Start Date</label>
    <type>Date</type>
</CustomField>