FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/fields/Excersice_Plan__c.field-meta.xml
<CustomField>
    <fullName>Excersice_Plan__c</fullName>
    <label>Excersice Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>