FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/fields/Meal_Plan__c.field-meta.xml
<CustomField>
    <fullName>Meal_Plan__c</fullName>
    <label>Meal Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>