FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Diet Plans</relationshipLabel>
    <relationshipName>Diet_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>