FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/fields/Supplement_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Requirements__c</fullName>
    <label>Supplement Requirements</label>
    <length>100</length>
    <type>Text</type>
</CustomField>