FitLifeProLatest/force-app/main/default/objects/Diet_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Diet_Plan_Name__c</columns>
    <columns>Diet_Start_Date__c</columns>
    <columns>Diet_End_Date__c</columns>
    <columns>Calorie_Goal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>